# herald

./: .env.example  .gitignore
backend/: Cargo.toml
backend/migrations/: 001_create_users.sql  002_create_topics.sql  003_create_feeds.sql  004_create_user_feeds.sql  005_create_articles.sql  006_create_user_articles.sql  007_create_curated_feeds.sql  008_seed_topics_and_feeds.sql  009_create_article_analysis.sql  010_create_opposing_articles.sql  011_add_politics_topic.sql  012_create_user_topics.sql
backend/src/: config.rs  errors.rs  main.rs
backend/src/auth/: jwt.rs  mod.rs  password.rs
backend/src/db/: articles.rs  feeds.rs  mod.rs  topics.rs  users.rs
backend/src/models/: article.rs  feed.rs  mod.rs  topic.rs  user.rs
backend/src/routes/: articles.rs  auth.rs  feeds.rs  health.rs  mod.rs  topics.rs
backend/src/services/: fetcher.rs  scheduler.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ArticleCard.jsx  ArticleGrid.jsx  ArticlePreview.jsx  LoadMoreButton.jsx  SortToggle.jsx  TopNav.jsx  UserMenu.jsx  index.js
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useArticles.js  useAuth.js  useTopics.js
frontend/src/pages/: Feed.jsx  Login.jsx  Onboarding.jsx  Settings.jsx  index.js
